Redo file structure, make changes to style, add build script, set up tox

--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,11 @@
 *.iml
 .idea/*
 
-# pip config file
-*.cfg
-
-# SignalFx Python client installation files
-easy_install.*
-six*
-certifi*
-chardet*
-google
-idna*
-pkg_resources
-protobuf*
-pyformance*
-requests*
-setuptools*
-signalfx*
-sseclient*
-tests
-urllib3*
-ws4py*
-
 # .pyc files
 *.pyc
+
+# Build directories
+/.tox/
+/build/
+/enhanced_rds.zip
+/*.egg-info
