--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: python
 python: "2.7"
-install:
-  - "python2.7 -m pip install flake8"
-  - "python2.7 pip install signalfx"
-script: python tests
+install: pip install tox-travis
+script: tox
 sudo: false
