--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,13 @@ skip_missing_interpreters = true
 
 [testenv]
 usedevelop = True
+setenv = groups = All
 commands = {envpython} tests/unittests.py
-deps = -r{toxinidir}/requirements.txt
+deps =
+    -r{toxinidir}/requirements.txt
+    boto3
+# boto3 is provided by lambda runtime and thus not in requirements.txt file
+
 
 [testenv:flake8]
 commands = flake8 enhanced_rds tests
